--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
           username: x
           password: ${{ secrets.FLY_API_TOKEN }}
       - name: Install pkg-config
-        run: sudo apt update && sudo apt install -y pkg-config
+        run: sudo apt update && sudo apt install -y pkg-config libssl-dev
       - name: Build image
         run: nix build .#container
       - name: Push image
