--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,21 +15,21 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
       - name: Install Nix
-        uses: cachix/install-nix-action@v27
-        with:
-          github_access_token: ${{ secrets.GITHUB_TOKEN }}
+        uses: DeterminateSystems/nix-installer-action@v12
+      - name: Setup cache
+        uses: DeterminateSystems/magic-nix-cache-action@v7
       - name: Setup flyctl
         uses: superfly/flyctl-actions/setup-flyctl@master
       - name: Build image
         run: nix build .#container
       - name: Push image
-        run: >
-          nix run nixpkgs#skopeo --inputs-from . -- copy --debug
-            --format v2s2
-            --dest-creds x:${{ secrets.FLY_API_TOKEN }}
-            docker-archive:"$(readlink ./result)"
+        run: |
+          nix run nixpkgs#skopeo --inputs-from . -- copy --debug \
+            --format v2s2 \
+            --dest-creds x:${{ secrets.FLY_API_TOKEN }} \
+            docker-archive:"$(readlink ./result)" \
             docker://registry.fly.io/btw:latest
-      - name: Deploy
+      - name: Deploy image
         run: flyctl deploy --image registry.fly.io/btw:latest --remote-only
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
