--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ codegen-units = 1
 
 [dependencies]
 anyhow = "1.0.86"
-reqwest = { version = "0.12.5", features = ["json"] }
+reqwest = { version = "0.12.5", features = ["json", "rustls-tls"], default-features = false }
 serenity = { version = "0.12.2", features = ["client", "gateway", "rustls_backend", "model"] }
 tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
 url = "2.5.2"
