--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,9 +3,13 @@ name = "btw"
 version = "0.1.0"
 edition = "2021"
 
+[profile.dev]
+debug = "line-tables-only"
+
 [profile.release]
 strip = true
 lto = true
+panic = "abort"
 codegen-units = 1
 
 [dependencies]
