--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,36 +1,19 @@
-# encoding
-newline_style = "Unix"
+unstable_features = true
 
-# match
+# -- Stable --
 match_block_trailing_comma = true
-
-# shorthand
+newline_style = "Unix"
 use_field_init_shorthand = true
 use_try_shorthand = true
 
-# nightly only features --------------------------------------------------------
-unstable_features = true
-
-# imports
-imports_granularity = "Crate"
-
-# imports
-group_imports = "StdExternalCrate"
-
-# condense
+# -- Requires nightly --
 condense_wildcard_suffixes = true
-overflow_delimited_expr = true
-
-# sorting
-reorder_impl_items = true
-
-# literal
-format_strings = true
-
-# comments
-normalize_comments = true
-wrap_comments = true
-
-# docs
 format_code_in_doc_comments = true
+format_strings = true
+group_imports = "StdExternalCrate"
+imports_granularity = "Crate"
+normalize_comments = true
 normalize_doc_attributes = true
+overflow_delimited_expr = true
+reorder_impl_items = true
+wrap_comments = true
