--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,10 @@ lto = true
 panic = "abort"
 codegen-units = 1
 
+[lints.clippy]
+pedantic = { level = "warn", priority = -1 }
+nursery = { level = "warn", priority = -1 }
+
 [dependencies]
 anyhow = "1.0.95"
 reqwest = { version = "0.12.9", features = ["json", "rustls-tls"], default-features = false }
