--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ nursery = { level = "warn", priority = -1 }
 
 [dependencies]
 anyhow = "1.0.95"
+futures = { version = "0.3.31", features = ["std"], default-features = false }
 reqwest = { version = "0.12.11", features = ["json", "rustls-tls"], default-features = false }
 serenity = { version = "0.12.4", features = ["chrono", "client", "gateway", "model", "rustls_backend"], default-features = false }
 tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
