--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ nursery = { level = "warn", priority = -1 }
 anyhow = "1.0.95"
 futures = "0.3.31"
 moka = { version = "0.12.8", features = ["future"] }
-reqwest = { version = "0.12.11", features = ["json", "rustls-tls"] }
+reqwest = { version = "0.12.11", features = ["charset", "http2", "json", "rustls-tls"], default-features = false }
 serenity = { version = "0.12.4", features = ["chrono", "client", "gateway", "model", "rustls_backend"], default-features = false }
 tokio = { version = "1.42.0", features = ["macros", "parking_lot", "rt-multi-thread"] }
 tracing = "0.1.40"
