--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,8 +18,10 @@ nursery = { level = "warn", priority = -1 }
 
 [dependencies]
 anyhow = "1.0.95"
-futures = "0.3.31"
+# Exclude "executor" from default features as we use Tokio as the async runtime
+futures = { version = "0.3.31", features = ["async-await", "std"], default-features = false }
 moka = { version = "0.12.9", features = ["future"] }
+# Exclude "default-tls" from default features to avoid build errors on Linux where it tries to find OpenSSL
 reqwest = { version = "0.12.12", features = ["charset", "http2", "json", "rustls-tls"], default-features = false }
 serenity = { version = "0.12.4", features = ["chrono", "client", "gateway", "model", "rustls_backend"], default-features = false }
 tokio = { version = "1.42.0", features = ["macros", "parking_lot", "rt-multi-thread"] }
