chore: Rename meta -> metadata

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
         run: nix build .#container-glibc
       - name: Push image to Fly.io registry
         run: |
-          VERSION=$(nix eval .#meta.cargo.package.version --raw)
+          VERSION=$(nix eval .#metadata.cargo.package.version --raw)
           echo "VERSION=$VERSION" >> $GITHUB_ENV
           # --debug: Enable verbose output
           # --insecure-policy: Don't look for `policy.json` file in local filesystem
