--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
         uses: ./.github/actions/cache
         with:
           package: .#_deps
-          skip-on-cache-hit: 'true'
+          skip-on-cache-hit: "true"
 
   checks:
     runs-on: ubuntu-24.04
@@ -71,7 +71,7 @@ jobs:
         uses: ./.github/actions/cache
         with:
           package: .#checks.${{ env.NIX_SYSTEM }}.${{ matrix.check }}
-          skip-on-cache-hit: 'true'
+          skip-on-cache-hit: "true"
 
   checks-build-exe:
     runs-on: ubuntu-24.04
@@ -93,7 +93,7 @@ jobs:
         uses: ./.github/actions/cache
         with:
           package: .#btw-${{ matrix.exe }}
-          skip-on-cache-hit: 'true'
+          skip-on-cache-hit: "true"
 
   checks-build-image:
     runs-on: ubuntu-24.04
@@ -115,7 +115,7 @@ jobs:
         uses: ./.github/actions/cache
         with:
           package: .#btw-${{ matrix.image }}-image
-          skip-on-cache-hit: 'true'
+          skip-on-cache-hit: "true"
 
   deploy:
     runs-on: ubuntu-24.04
